Update preview file

--- a/preview.html
+++ b/preview.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <script src="dist/widget.js"></script>
+    <script>
+        iCHEFWidget.init({ phone: '0227600120', tooltip: 'Contact iCHEF' });
+    </script>
 </body>
 </html>
